# omnilaunch

./: .gitignore  README.md  __init__.py  pyproject.toml
cli/: __init__.py  main.py
docs/: MODAL_SETUP.md
registry/: index.json
registry/gpt-oss-120b/: README.md  modal_app.py  runner.yaml
registry/gpt-oss-120b/schema/: dataset.json
registry/gpt-oss-120b/tests/: smoke.py
registry/gpt-oss-20b/: README.md  modal_app.py  runner.yaml
registry/gpt-oss-20b/schema/: benchmark_tinymmlu.json  infer.json
registry/gpt-oss-20b/tests/: smoke.py
registry/omnilaunch/sdxl/0.1.0/: manifest.json
registry/qwen3-vl/: README.md  modal_app.py  runner.yaml
registry/qwen3-vl/schema/: dataset.json  download_dataset.json  infer.json  train_lora.json
registry/qwen3-vl/tests/: smoke.py
registry/sdxl/: README.md  modal_app.py  runner.yaml
registry/sdxl-pixel-art/: README.md  modal_app.py  runner.yaml
registry/sdxl-pixel-art/schema/: dataset.json  infer.json
registry/sdxl-pixel-art/tests/: smoke.py
registry/sdxl-spo/: README.md  modal_app.py  runner.yaml
registry/sdxl-spo/schema/: dataset.json  infer.json
registry/sdxl-spo/tests/: smoke.py
registry/sdxl/schema/: dataset.json  infer.json
registry/sdxl/tests/: smoke.py
runners/: trm.py
schemas/: README.md
